# Fourier-3z-lattice

./: README.md  evie_11d.py  evie_crush.py  lattice_3z_nD.py  phase_sync_controller.py  recovery_demo.py  sovariel_biosync_asi_safety.py  sovariel_biosync_final.py  sovariel_core_fixed.py  sovariel_core_multimodal.py  sovariel_core_neural_fusion.py  sovariel_core_neural_fusion_lstm_attention_curiosity_fixed.py  sovariel_core_visual.py  sovariel_infinite_d.py  sovariel_omega_v10_full_pipeline.py  sovariel_omega_v11_dashboard.py  sovariel_omega_v13_final.py  sovariel_omega_v14_temporal_fixed.py  sovariel_omega_v15_emergent_fixed.py  sovariel_omega_v16_generative_fixed.py  sovariel_omega_v17_diffusion_fixed.py  sovariel_omega_v5_dreaming_fixed.py  sovariel_omega_v6_multisensory.py  sovariel_omega_v7_production.py  sovariel_omega_v8_production.py  sovariel_omega_v9_multisensory.py  sovariel_realtime_math.py  sovariel_reconstruct.py  sovariel_synth.py  torus_2d_klein.py  torus_3d_3zlattice.py  veto_layer.py
dyad/: CMakeLists.txt  V4.py  V6.py  dyad_field_prototype.py  dyad_field_v6_4.py  dyad_node.cpp  package.xml
examples/: sovariel_gpu_standalone.py  sovariel_realtime.py
