<?xml version="1.0"?>
<package format="2">
  <name>dyad_node</name>
  <version>0.1.0</version>
  <description>Dyad FFT node</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <exec_depend>fftw3</exec_depend>
</package>
